[gd_scene load_steps=4 format=3 uid="uid://c1j2u5bqgam84"]

[ext_resource type="Script" path="res://scripts/menus/charactercreation/charactercreation.gd" id="1"]
[ext_resource type="Material" path="res://shaders/pixel_white.tres" id="2"]
[ext_resource type="Theme" uid="uid://cakbdiympnnj6" path="res://themes/angluar_panel_box.tres" id="2_qri4f"]

[node name="CharacterCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CreateConfirmButton" type="Button" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.533333
anchor_right = 0.5
anchor_bottom = 0.533333
offset_left = -455.0
offset_top = 123.0
offset_right = -66.0
offset_bottom = 159.0
text = "Confirm "

[node name="NinePatchRect" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -537.0
offset_top = -259.0
offset_right = -12.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qri4f")

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Name Here . . . (Press enter to confirm change)"
max_length = 64

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bodytype"

[node name="Label4" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Skin Color"

[node name="Label3" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Hair Style"

[node name="BodytypeMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="SkinMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="HairStyleMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label5" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tail Style"

[node name="Label7" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ear Style"

[node name="Label6" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Accessory Style"

[node name="TailMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="EarMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="AccessoryMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label8" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Spawn Location"

[node name="Label9" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label10" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SpawnMenu" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Blank1" type="Control" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Blank2" type="Control" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="DirSelect" type="Panel" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/DirSelect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Rotation"

[node name="Left" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/DirSelect"]
layout_mode = 0
anchor_left = 0.0446429
anchor_top = 0.3
anchor_right = 0.223214
anchor_bottom = 0.7
offset_right = -13.0
text = "<"

[node name="Right" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/DirSelect"]
layout_mode = 0
anchor_left = 0.776786
anchor_top = 0.3
anchor_right = 0.955357
anchor_bottom = 0.7
text = ">"

[node name="EyesMenu" type="Panel" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/EyesMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_top = 3.0
offset_right = 31.5
offset_bottom = 14.0
text = "Eye Color"

[node name="EyePicker" type="ColorPickerButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/EyesMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 21.0
offset_right = -10.0
offset_bottom = -3.0

[node name="HairColorMenu" type="Panel" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HairColorMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_top = 3.0
offset_right = 31.5
offset_bottom = 14.0
text = "Hair Color"

[node name="HairPicker" type="ColorPickerButton" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HairColorMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 21.0
offset_right = -10.0
offset_bottom = -3.0

[node name="AgeInput" type="HSlider" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
min_value = 18.0
max_value = 50.0
value = 18.0
rounded = true

[node name="Label2" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/AgeInput"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
text = "18"

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/AgeInput"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 14.0
text = "Age"

[node name="HeightInput" type="HSlider" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
min_value = 18.0
max_value = 50.0
value = 18.0
rounded = true

[node name="Label2" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HeightInput"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HeightInput"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 14.0
text = "Height"

[node name="NinePatchRect2" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 580)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
theme = ExtResource("2_qri4f")

[node name="RaceSelection" type="Control" parent="NinePatchRect2"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 45.0
offset_right = -58.0
offset_bottom = 9.0

[node name="RaceContainer" type="TabContainer" parent="NinePatchRect2/RaceSelection"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -86.0
all_tabs_in_front = true

[node name="RaceConfirm" type="Button" parent="NinePatchRect2/RaceSelection"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_bottom = -34.0
text = "Select Race"

[node name="PreviewSpriteContainer" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Body" type="TextureRect" parent="PreviewSpriteContainer"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -100.0
offset_right = 288.0
offset_bottom = 100.0
expand_mode = 1

[node name="Eyes" type="TextureRect" parent="PreviewSpriteContainer"]
material = ExtResource("2")
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -100.0
offset_right = 288.0
offset_bottom = 100.0
expand_mode = 1

[node name="Hair" type="TextureRect" parent="PreviewSpriteContainer"]
material = ExtResource("2")
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -100.0
offset_right = 288.0
offset_bottom = 100.0
expand_mode = 1

[connection signal="pressed" from="CreateConfirmButton" to="." method="_on_CreateConfirmButton_pressed"]
[connection signal="text_submitted" from="NinePatchRect/MarginContainer/VBoxContainer/NameInput" to="." method="_on_NameInput_text_entered"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/BodytypeMenu" to="." method="_on_GenderMenu_item_selected"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/SkinMenu" to="." method="_on_SkinMenu_item_selected"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HairStyleMenu" to="." method="_on_HairStyleMenu_item_selected"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/TailMenu" to="." method="_on_TailMenu_item_selected"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/EarMenu" to="." method="_on_EarMenu_item_selected"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/AccessoryMenu" to="." method="_on_AccessoryMenu_item_selected"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/DirSelect/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/DirSelect/Right" to="." method="_on_Right_pressed"]
[connection signal="color_changed" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/EyesMenu/EyePicker" to="." method="_on_EyePicker_color_changed"]
[connection signal="color_changed" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HairColorMenu/HairPicker" to="." method="_on_HairPicker_color_changed"]
[connection signal="value_changed" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/AgeInput" to="." method="_on_AgeInput_value_changed"]
[connection signal="value_changed" from="NinePatchRect/MarginContainer/VBoxContainer/GridContainer/HeightInput" to="." method="_on_HeightInput_value_changed"]
[connection signal="pressed" from="NinePatchRect2/RaceSelection/RaceConfirm" to="." method="_on_RaceConfirm_pressed"]
